--- a/src/app/window/window.component.scss
+++ b/src/app/window/window.component.scss
@@ -163,7 +163,7 @@ height: fit-content;
   flex-grow: 1;
   box-sizing: border-box;
   overflow: scroll;
-  background-color: rgba($color: black, $alpha: 0.9);
+  background-color: rgba($color: black, $alpha: 0.79);
 }
 
 .footer
